--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -16,3 +16,36 @@
 tbody
   tr:nth-child(2n+1)
     background-color: #F6F6F6
+
+//Colores de texto 
+.texto
+  &--1
+    color: $color-primario
+  &--2
+    color: $color-secundario
+  &--3
+    color: $color-acento-contenido
+  &--4
+    color: $color-acento-botones
+  &--5
+    color: #FF7A36
+//Colores listados 
+.cuadro-listados
+  &--1
+    background-color: $color-primario
+    font-weight: bold
+    color: $color-sistema-texto
+  &--2
+    font-weight: bold
+    background-color: $color-secundario
+    color: $color-sistema-texto
+  &--3
+    font-weight: bold
+    background-color: $color-acento-contenido
+    color: $color-sistema-texto
+  &--4
+    font-weight: bold
+    background-color: $color-acento-botones
+    color: $color-sistema-texto
+.cuadro-dialogos
+  background-color: #F3F9FF
